redis-cluster/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: redis-cluster
  labels:
    app.kubernetes.io/part-of: platform-tools
